--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{ts,js,css,json,md}": "prettier --write",
-  "*.{ts}": "eslint --max-warnings=0"
+  "*.{ts,tsx,js,css,json,md}": "prettier --write",
+  "*.{ts,tsx}": "eslint --max-warnings=0"
 }
