--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
+    "msw": "^2.0.3",
     "prettier": "^3.0.3",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
