--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,4 +17,4 @@ jobs:
       - name: 🧪 Testing
         run: npm test
         env:
-          VITE_API_URL: ${{secrets.VITE_API_URL}})
+          VITE_URL_API: ${{secrets.VITE_URL_API}})
